# ParallelMultiplication

./: .gitignore  .main.c.swp  CMakeLists.txt  Makefile  README.md  analyse.pl  cannon.c  counter.c  data.sh  deadlock.c  deadlock.h  debug_143722063MKL  debug_143722064SEQUENTIAL  debug_143722067CANNON  dgemm-mpi.c  generate  job.sh  job2.sh  job_seq.sh  loader.c  loader.h  main.c  makeplots.sh  makeplots_seq.sh  parse.pl  pmm.e34297  pmm.e34570  pmm.e34574  pmm.e34578  pmm.e34656  pmm.e34825  pmm.e34908  pmm.e34974  pmm.e35003  pmm.e35113  pmm.e35126  pmm.e35435  pmm.sh  pmm_0.e34211  pmm_0.e34212  (+10 more)
debug/: 0000_0000_B  0000_0000_C  0000_0001_B  0000_0001_C  0000_0002_C  0000_0003_C  0000_0004_A  0000_0004_C  0000_0005_B  0000_0005_C  0000_0006_C  0000_0007_C  0001_0000_A  0001_0000_C  0001_0001_C  0001_0002_A  0001_0002_B  0001_0002_C  0001_0003_C  0001_0004_C  0001_0005_C  0001_0006_C  0001_0007_C  0002_0000_A  0002_0000_B  0002_0000_C  0002_0001_A  0002_0001_B  0002_0001_C  0002_0002_C  0002_0003_B  0002_0003_C  0002_0004_C  0002_0005_C  0002_0006_C  0002_0007_A  0002_0007_C  0003_0000_A  0003_0000_C  0003_0001_B  (+4339 more)
gnuplot/: cannon.eps  cannon.tex  cannon_dgemm.eps  cannon_dgemm.tex  cannon_diff_n.eps  cannon_diff_n.tex  cannon_mkl_diff_n.eps  cannon_omp.eps  cannon_omp.tex  cannon_seq.eps  cannon_seq.tex  mono.eps  mono.tex  scal_cannon_dgemm.eps  scal_cannon_dgemm.tex  scal_cannon_omp.eps  scal_cannon_omp.tex  speedup-inc.eps  speedup.eps  speedup.p  speedup.tex  speedup_cannon_dgemm.p  speedup_cannon_dgemm_diff_n.p  speedup_cannon_dgemm_scal.p  speedup_cannon_mono.p  (+9 more)
(+722 files in other folders)
